# Willow

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile-ubuntu22  Dockerfile-ubuntu24  Dockerfile-ubuntu24 copy  README.md  RELEASING.md  pyproject.toml  script.py
.github/: extract_changelog.py
.github/workflows/: build-release.yml  nightly-test.yml  publish.yml  test.yml  zizmor.yml
docs/: changelog.rst  conf.py
docs/guide/: optimize.rst  save.rst
tests/: test_optimizers.py  test_pillow.py
tests/images/optimizers/: optimized.jxl  original.jxl
willow/: __init__.py  image.py  registry.py
willow/optimizers/: __init__.py  cjxl.py
willow/plugins/: opencv.py  pillow.py
willow/utils/: compat.py
