[build-system]
build-backend = "flit_core.buildapi"
requires = [ "flit-core>=3.2,<4" ]

[project]
name = "willow"
description = "A Python image library that sits on top of Pillow, Wand and OpenCV"
readme = "README.md"
keywords = [ "Imaging" ]
license = "BSD-3-Clause"
maintainers = [ { name = "Wagtail Core team", email = "hello@wagtail.org" } ]
authors = [ { name = "Karl Hobley", email = "karl@kaed.uk" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dynamic = [ "version" ]  # will read __version__ from willow/__init__.py
dependencies = [
  "defusedxml>=0.7,<1",
  "filetype>=1.0.10,!=1.1",
]
optional-dependencies.docs = [
  "sphinx>=7",
  "sphinx-copybutton>=0.5",
  "sphinx-wagtail-theme>=6.1.1,<7",
  "sphinxcontrib-spelling>=8,<9"
]
optional-dependencies.heif = [ "pillow-heif>=1" ]
optional-dependencies.pillow = [ "pillow>=11.3" ]
optional-dependencies.testing = [ "coverage[toml]>=7.2.7,<8", "pre-commit>=3.4", "willow[heif,pillow,wand]" ]
optional-dependencies.wand = [ "wand>=0.6,<1" ]
urls.Changelog = "https://willow.wagtail.org/stable/changelog.html"
urls.Documentation = "https://willow.wagtail.org/stable/"
urls.Source = "https://github.com/wagtail/Willow"

[tool.flit]
module.name = "willow"
sdist.exclude = [
  ".*",
  "*.json",
  "*.ini",
  "*.sh",
  "*.yml",
  "*.yaml",
  "docs/",
  "tests/",
  "CHANGELOG.txt",
  "Dockerfile.py3",
  "runtests.py",
]

[tool.ruff]
target-version = "py310"  # minimum target version
lint.select = [
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "T20", # flake8-print
  "UP",  # pyupgrade
]
# E501: Line too long
lint.ignore = [ "E501" ]

[tool.coverage]
run.branch = true
run.omit = [ "tests/*", "willow/utils/deprecation.py" ]
run.source_pkgs = [ "willow" ]
paths.source = [ "willow" ]
report.exclude_lines = [
  # Don't complain about abstract methods, they aren't run:
  "@(abc.)?abstractmethod",

  # Don't complain about missing debug-only code:
  "def __repr__",
  "if __name__ == .__main__.:",

  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if self.debug",

  # Nor complain about type checking
  "if TYPE_CHECKING:",
  # Have to re-enable the standard pragma
  "pragma: no cover",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
]
report.ignore_errors = true
report.show_missing = true
report.skip_covered = true
report.skip_empty = true
